@@ -767,3 +767,7 @@
 
 	* Fix naviframe to not send hide signals even before item doens't created
   	yet.
+
+2012-12-06  Cedric Bail
+
+	* Fix possible segv in elm_quicklaunch infrastructure.
